[course] enrollment update

--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -27,7 +27,7 @@
         - else
           .flat-form.section
             %h2 Enroll for free now
-            .section#enroll-section
+            .section.hide#enroll-section
               = link_to 'Enroll', 'javascript:void(0);', class: 'btn btn-primary btn-large btn-block', id: 'enroll-section-btn'
             .section.hide#signup-or-signin-section
               .row-fluid
