new hero visual flow

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1074,14 +1074,21 @@ ul.equipment
 .edit-pair-transclude
   width: 100%
 
-.transparent-target
+.edit-hint
   position: absolute
-  width: 100%
-  height:  100%
+  bottom: 10px
+  left:  10px
   z-index: 1000
 
-#edit-group
+.video-container
+  .csfilepicker
+    .btn-toolbar
+      margin-top: 0px
 
+.hero-visual
+  position: relative
+
+#edit-group
   i
     font-size: 18px
   .btn
