--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -47,8 +47,8 @@
             .section.hide#signin-and-enroll-section
               = form_tag signin_and_enroll_path, method: :post do
                 = hidden_field_tag :course_id, @course.id
-                = text_field_tag :email, nil, placeholder: 'email', class: 'input-block-level'
-                = password_field_tag :password, nil, placeholder: 'password', class: 'input-block-level'
+                = text_field_tag :email, nil, placeholder: 'email', class: 'input-block-level', required: true
+                = password_field_tag :password, nil, placeholder: 'password', class: 'input-block-level', required: true
                 = submit_tag 'Sign In and Enroll', class: 'btn btn-primary btn-large btn-block'
       .well   
         - if @course.users.count > 1
