--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -29,6 +29,8 @@
                     .dropdown-background
                     %li= link_to 'Recipes', recipe_gallery_index_url
                     %li= link_to 'Techniques', techniques_url
+                    -if admin_user_signed_in?
+                      %li= link_to 'New Recipe', new_activity_url
                 %li.dropdown
                   .nav-item-border
                   = link_to 'javascript:void(0);', class: 'dropdown-toggle', data: {toggle: 'dropdown'} do
