--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -2,31 +2,32 @@
 
 - content_for :title, @activity.title.html_safe
 - content_for :description, @activity.description != "" ? @activity.description.html_safe : @activity.title.html_safe
-- content_for :canonical_link, activity_url(@activity)
+- content_for :canonical_link, activity_url(@activity) if @activity.id
 - content_for :keywords, @activity.tag_list.join(',')
-- content_for :facebook_og do
-  %meta{property: 'og:url', content: activity_url(@activity)}
-  %meta{property: 'og:title', content: @activity.title.html_safe}
-  %meta{property: 'og:description', content: @activity.description != "" ? @activity.description.html_safe : @activity.title.html_safe}
-  - if @activity.image_id?
-    %meta{property: 'og:image', content: filepicker_activity_hero_image(@activity.image_id)}
-  - elsif @activity.featured_image_id?
-    %meta{property: 'og:image', content: filepicker_activity_hero_image(@activity.featured_image_id)}
-- content_for :twitter_cards do
-  %meta{property: 'twitter:site', content: '@chefsteps'}
-  %meta{property: 'twitter:title', content: @activity.title.html_safe }
-  %meta{property: 'twitter:description', content: @activity.description}
-  - if @activity.image_id?
-    %meta{property: 'twitter:image:src', content: filepicker_activity_hero_image(@activity.image_id)}
-  - elsif @activity.featured_image_id?
-    %meta{property: 'twitter:image:src', content: filepicker_activity_hero_image(@activity.featured_image_id)}
-  - if @activity.youtube_id?
-    %meta{property: 'twitter:card', content: 'player'}
-    %meta{property: 'twitter:player', content: "https://www.youtube.com/embed/#{@activity.youtube_id}?wmode=opaque\&rel=0&modestbranding=1\&showinfo=0\&vq=hd720"}
-    %meta{property: 'twitter:player:height', content: '270'}
-    %meta{property: 'twitter:player:width', content: '480'}
-  - else
-    %meta{property: 'twitter:card', content: 'summary_large_image'}
+- if @activity.id
+  - content_for :facebook_og do
+    %meta{property: 'og:url', content: activity_url(@activity)}
+    %meta{property: 'og:title', content: @activity.title.html_safe}
+    %meta{property: 'og:description', content: @activity.description != "" ? @activity.description.html_safe : @activity.title.html_safe}
+    - if @activity.image_id?
+      %meta{property: 'og:image', content: filepicker_activity_hero_image(@activity.image_id)}
+    - elsif @activity.featured_image_id?
+      %meta{property: 'og:image', content: filepicker_activity_hero_image(@activity.featured_image_id)}
+  - content_for :twitter_cards do
+    %meta{property: 'twitter:site', content: '@chefsteps'}
+    %meta{property: 'twitter:title', content: @activity.title.html_safe }
+    %meta{property: 'twitter:description', content: @activity.description}
+    - if @activity.image_id?
+      %meta{property: 'twitter:image:src', content: filepicker_activity_hero_image(@activity.image_id)}
+    - elsif @activity.featured_image_id?
+      %meta{property: 'twitter:image:src', content: filepicker_activity_hero_image(@activity.featured_image_id)}
+    - if @activity.youtube_id?
+      %meta{property: 'twitter:card', content: 'player'}
+      %meta{property: 'twitter:player', content: "https://www.youtube.com/embed/#{@activity.youtube_id}?wmode=opaque\&rel=0&modestbranding=1\&showinfo=0\&vq=hd720"}
+      %meta{property: 'twitter:player:height', content: '270'}
+      %meta{property: 'twitter:player:width', content: '480'}
+    - else
+      %meta{property: 'twitter:card', content: 'summary_large_image'}
 - @body_tag_attributes = {:'ng-app' => "ChefStepsApp", :'ng-controller' => "ActivityController", :'ng-click' => "bodyClick()"}
 
 
