--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -179,20 +179,21 @@
         %h4.text-center= "The Professional Kit $119"
         = buy_now(311979875)
 
-.container
-  .row.section
-    %h2.text-orange Instructors
-  .row.section
-    .span2
-      = image_tag('chris-large.jpg', title: 'Chris Young', class: 'img-profile')
-    .span4
-      :markdown
-        #{bio_chris.copy.to_s}
-    .span2
-      = image_tag('grant-large.jpg', title: 'Chris Young', class: 'img-profile')
-    .span4
-      :markdown
-        #{bio_grant.copy.to_s}
+- if bio_chris && bio_grant
+  .container
+    .row.section
+      %h2.text-orange Instructors
+    .row.section
+      .span2
+        = image_tag('chris-large.jpg', title: 'Chris Young', class: 'img-profile')
+      .span4
+        :markdown
+          #{bio_chris.copy.to_s}
+      .span2
+        = image_tag('grant-large.jpg', title: 'Chris Young', class: 'img-profile')
+      .span4
+        :markdown
+          #{bio_grant.copy.to_s}
 
 %hr
 .container
