--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -21,6 +21,7 @@
   color: white
   position: fixed
   padding: 10px 0px
+  max-height: 200px
   bottom: -200px
   width: 100%
   @include boxsizing
@@ -1388,3 +1389,7 @@ csingredienteditpair
 
   .top-container
     margin-top: 0px
+
+  .popup-bottom
+    h3
+      font-size: 16px
