[popup] iphone bugfix

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1393,3 +1393,12 @@ csingredienteditpair
   .popup-bottom
     h3
       font-size: 16px
+
+@media (max-width: 320px)
+  .popup-bottom
+    font-size: 12px
+    h3
+      font-size: 14px
+      line-height: 16px
+    .input-signup-email
+      width: 50%
