[seo] fix title

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,4 @@
-- content_for :title, "ChefSteps - Learn how to be a more creative cook."
+- content_for :title, "Learn how to be a better cook."
 - content_for :description, "Free online cooking school from key members of the Modernist Cuisine team. Our first course will teach you everything you need to know about sous vide cooking."
 
 = render 'index_B'
