--- a/app/views/activities/_main_course_activity_content.html.haml
+++ b/app/views/activities/_main_course_activity_content.html.haml
@@ -24,7 +24,7 @@
     - if activity.ingredients.any?
       .section
         .activity-ingredients-list#full-ingredients-list.section{data: {target: ''}}
-          .well
+          .well(ng-show="activity.ingredients.length" )
             = render 'ingredients_list', ingredients: activity.ingredients
     - if activity.yield.present?
       .section
@@ -64,7 +64,8 @@
               %h4= step.title
             - if step.ingredients.any?
               .step-ingredients-source.well
-                = render 'ingredients_list', ingredients: step.ingredients
+                / = render 'ingredients_list', ingredients: step.ingredients
+                = render 'old_ingredients_list', ingredients: step.ingredients
             :markdown
               #{apply_shortcodes(step.directions)}
             .step-actions.btn-group
