--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -50,10 +50,9 @@
                 = text_field_tag :email, nil, placeholder: 'email', class: 'input-block-level', required: true
                 = password_field_tag :password, nil, placeholder: 'password', class: 'input-block-level', required: true
                 = submit_tag 'Sign In and Enroll', class: 'btn btn-primary btn-large btn-block'
-      .well   
-        - if @course.users.count > 1
+      - if @course.users.count > 1 && @course.uploads.count > 3
+        .well   
           %h4= "Current enrollment: #{@course.users.count}"
-        - if @course.uploads.count > 3
           %h4 Here are some things students have accomplished so far:
           .horizontal-slider{data: {direction: 'right'}}
             .horizontal-slider-wrap
