[spherification] kit annotations copy edit

--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -102,7 +102,7 @@
           .annotation Syringe 
           .annotation Spherification Straining Spoon
           .annotation 25 g Sphere Magic
-          .annotation 25 g Sodium Citrate
+          .annotation 50 g Sodium Citrate
           .annotation 50 g Calcium Gluconate
           .annotation 50 g Calcium Chloride
           .annotation 50 g Xanthan Gum
@@ -134,8 +134,8 @@
           .annotation 50 g Calcium Gluconate
           .annotation 50 g Calcium Chloride
           .annotation 50 g Xanthan Gum
-          .annotation High-Accuracy Scale
-          .annotation Silicon Hemisphere Mold
+          .annotation High-Precision Scale
+          .annotation Frozen Reverse Spherification Mold
       .row-fluid
         .span6
           = image_tag 'https://www.filepicker.io/api/file/10jMQrfrTYazji1Sc4XA'
@@ -159,12 +159,12 @@
           .annotation Syringe 
           .annotation Spherification Straining Spoon
           .annotation 25 g Sphere Magic
-          .annotation 25 g SHMP
+          .annotation 50 g SHMP
           .annotation 50 g Calcium Gluconate
           .annotation 50 g Calcium Chloride
           .annotation 50 g Xanthan Gum
-          .annotation High-Accuracy Scale
-          .annotation Silicon Hemisphere Mold
+          .annotation High-Precision Scale
+          .annotation Frozen Reverse Spherification Mold
           .annotation Rapid Caviar Maker
       .row-fluid
         .span6
