progress on forking

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -731,6 +731,9 @@ ul.equipment
   &:hover
     background: $darker_orange
     @include transition(all 100ms)
+  &:disabled
+    background: #696969
+    color:  #d3d3d3
 
 .btn-secondary
   background: $offwhite
