--- a/app/views/user_profiles/show.html.haml
+++ b/app/views/user_profiles/show.html.haml
@@ -18,6 +18,8 @@
     .span2
       .well.profile-badges
         %h4 Badges
+        - @user.badges.each do |badge|
+          = badge.inspect
       - if current_user == @user
         = link_to 'Edit Profile', edit_user_profile_path, class: 'btn btn-primary btn-block'
         = link_to 'Sign out', sign_out_path, class: 'btn btn-primary btn-block'
