--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -48,8 +48,16 @@
         %csEditPair#title-edit-pair
           %csEditPairShow
             %h1.activity-title(ng-bind-html-unsafe="activity.title || 'Add title...'" itemprop='name' ng-class="disableIf(! activity.title.length)")
+            -if @activity.source_activity_id
+              %h5(style="font-weight: normal;")
+                {{sourceActivityTypeString()}}
+                = link_to @activity.source_activity.title, activity_path(@activity.source_activity)
           %csEditPairEdit
-            %textarea.nohtml(name="title" rows=2 data-ng-model="activity.title" placeholder="Add title...")
+            %textarea.nohtml(name="title" rows=2 data-ng-model="activity.title" placeholder="Add title..." required="true")
+            -if @activity.source_activity_id
+              %h5(style="font-weight: normal;")
+                %select.unit(type="text" ng-model="activity.source_type" required="true" ng-options="s.id as s.name for s in sourceActivityTypes")
+                = link_to @activity.source_activity.title, activity_path(@activity.source_activity)
 
       .span6.noprint
 
