allow an explanation for incorrect multiple choice questions

--- a/app/assets/stylesheets/admin/_quiz.css.sass
+++ b/app/assets/stylesheets/admin/_quiz.css.sass
@@ -76,7 +76,7 @@ ol#question-list
       clear: both
       font-weight: bold
       margin-top: 10px
-    input[name=question], input[name=instructions]
+    input[name=question], input[name=instructions], input[name=explanation]
       float: left
       clear: left
       font-size: 14px
@@ -84,7 +84,7 @@ ol#question-list
       margin-top: 5px
     input[name=question]
       width: 84%
-    input[name=instructions]
+    input[name=instructions], input[name=explanation]
       width: 97%
     h3, h4
       float: left
