--- a/app/views/user_profiles/show.html.haml
+++ b/app/views/user_profiles/show.html.haml
@@ -19,7 +19,8 @@
       .well.profile-badges
         %h4 Badges
         - @user.badges.each do |badge|
-          = badge.inspect
+          - if badge.image
+            = image_tag badge.image
       - if current_user == @user
         = link_to 'Edit Profile', edit_user_profile_path, class: 'btn btn-primary btn-block'
         = link_to 'Sign out', sign_out_path, class: 'btn btn-primary btn-block'
